--- a/src/index.css
+++ b/src/index.css
@@ -26,9 +26,26 @@ ol, ul {
   margin-bottom: 10px;
 }
 
-.square {
-  background: #fff;
+.square_white {
+  color: #000;
+  background-color: #fff;
   border: 1px solid #999;
+  float: left;
+  font-size: 24px;
+  font-weight: bold;
+  line-height: 34px;
+  margin-right: -1px;
+  margin-top: -1px;
+  padding: 0;
+  text-align: center;
+
+  height: 50px;
+  width: 50px;
+}
+
+.square_black{
+  color: #fff;
+  background-color: #000;
   float: left;
   font-size: 24px;
   font-weight: bold;
