--- a/src/index.css
+++ b/src/index.css
@@ -29,7 +29,8 @@ ol, ul {
 .square_white {
   color: #000;
   background-color: #fff;
-  border: 1px solid #999;
+  border: 1px solid #000;
+  background-size:cover;
   float: left;
   font-size: 24px;
   font-weight: bold;
@@ -38,7 +39,6 @@ ol, ul {
   margin-top: -1px;
   padding: 0;
   text-align: center;
-
   height: 50px;
   width: 50px;
 }
@@ -46,6 +46,8 @@ ol, ul {
 .square_black{
   color: #fff;
   background-color: #000;
+  border: 1px solid #000;
+  background-size:cover;
   float: left;
   font-size: 24px;
   font-weight: bold;
