--- a/src/index.css
+++ b/src/index.css
@@ -37,7 +37,7 @@ ol, ul {
   line-height: 34px;
   margin-right: -1px;
   margin-top: -1px;
-  padding: 0;
+  padding: 4px;
   text-align: center;
   height: 50px;
   width: 50px;
@@ -54,8 +54,8 @@ ol, ul {
   line-height: 34px;
   margin-right: -1px;
   margin-top: -1px;
-  padding: 0;
   text-align: center;
+  padding: 4px;
 
   height: 50px;
   width: 50px;
